// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShapeV2 Shape data is gracefully handles missing/extra props copyData 1`] = `
{
  "color": {
    "alpha": 1,
    "swatchId": "[swatch-id]",
  },
  "link": undefined,
  "list": undefined,
  "text": "Hello world",
}
`;

exports[`ShapeV2 Shape data is gracefully handles missing/extra props fromData 1`] = `
{
  "color": {
    "alpha": 1,
    "swatchId": "[swatch-id]",
  },
  "link": undefined,
  "list": undefined,
  "text": "Hello world",
}
`;

exports[`ShapeV2 Shape data is gracefully handles missing/extra props getTranslatableData 1`] = `
{
  "color": null,
  "link": null,
  "list": null,
  "text": "Hello world",
}
`;

exports[`ShapeV2 Shape data is gracefully handles missing/extra props mergeTranslatedData 1`] = `
{
  "color": {
    "alpha": 1,
    "swatchId": "[swatch-id]",
  },
  "link": undefined,
  "list": undefined,
  "text": "Hello world",
}
`;

exports[`ShapeV2 Shape data is gracefully handles missing/extra props toData 1`] = `
{
  "@@makeswift/type": "shape-v2::v1",
  "value": {
    "color": {
      "@@makeswift/type": "color::v1",
      "alpha": 1,
      "swatchId": "[swatch-id]",
    },
    "link": {
      "payload": {
        "openInNewTab": false,
        "pageId": "[page-id]",
      },
      "type": "OPEN_PAGE",
    },
    "list": [
      {
        "id": "xxxxxxxx-xxxx-xxxx-xxxx-100000000000",
        "type": "makeswift::controls::number",
        "value": {
          "@@makeswift/type": "number::v1",
          "value": 17,
        },
      },
    ],
    "text": {
      "@@makeswift/type": "text-area::v1",
      "value": "Hello world",
    },
  },
}
`;

exports[`ShapeV2 ShapeV2 versioned data is gracefully handles missing/extra props copyData 1`] = `
{
  "color": {
    "alpha": 1,
    "swatchId": "[swatch-id]",
  },
  "link": undefined,
  "list": undefined,
  "text": "Hello world",
}
`;

exports[`ShapeV2 ShapeV2 versioned data is gracefully handles missing/extra props fromData 1`] = `
{
  "color": {
    "alpha": 1,
    "swatchId": "[swatch-id]",
  },
  "link": undefined,
  "list": undefined,
  "text": "Hello world",
}
`;

exports[`ShapeV2 ShapeV2 versioned data is gracefully handles missing/extra props getTranslatableData 1`] = `
{
  "color": null,
  "link": null,
  "list": null,
  "text": "Hello world",
}
`;

exports[`ShapeV2 ShapeV2 versioned data is gracefully handles missing/extra props mergeTranslatedData 1`] = `
{
  "color": {
    "alpha": 1,
    "swatchId": "[swatch-id]",
  },
  "link": undefined,
  "list": undefined,
  "text": "Hello world",
}
`;

exports[`ShapeV2 ShapeV2 versioned data is gracefully handles missing/extra props toData 1`] = `
{
  "@@makeswift/type": "shape-v2::v1",
  "value": {
    "color": {
      "@@makeswift/type": "color::v1",
      "alpha": 1,
      "swatchId": "[swatch-id]",
    },
    "link": {
      "payload": {
        "openInNewTab": false,
        "pageId": "[page-id]",
      },
      "type": "OPEN_PAGE",
    },
    "list": [
      {
        "id": "xxxxxxxx-xxxx-xxxx-xxxx-100000000001",
        "type": "makeswift::controls::number",
        "value": {
          "@@makeswift/type": "number::v1",
          "value": 17,
        },
      },
    ],
    "text": {
      "@@makeswift/type": "text-area::v1",
      "value": "Hello world",
    },
  },
}
`;

exports[`ShapeV2 constructor heterogenous controls 1`] = `
ShapeV2Definition {
  "config": {
    "layout": "makeswift::controls::shape-v2::layout::inline",
    "type": {
      "num": CheckboxDefinition {
        "config": {},
        "version": 1,
      },
      "val": ColorDefinition {
        "config": {
          "defaultValue": "red",
        },
        "version": 1,
      },
    },
  },
}
`;

exports[`ShapeV2 serialization serialize/deserialize composable shape of controls 1`] = `
{
  "config": {
    "layout": "makeswift::controls::shape-v2::layout::inline",
    "type": {
      "shape": {
        "config": {
          "layout": "makeswift::controls::shape-v2::layout::inline",
          "type": {
            "checkbox": {
              "config": {},
              "type": "makeswift::controls::checkbox",
              "version": 1,
            },
            "color": {
              "config": {
                "defaultValue": "red",
              },
              "type": "makeswift::controls::color",
              "version": 1,
            },
          },
        },
        "type": "makeswift::controls::shape-v2",
      },
    },
  },
  "type": "makeswift::controls::shape-v2",
}
`;

exports[`ShapeV2 serialization serialize/deserialize label of controls 1`] = `
{
  "config": {
    "label": "Shape",
    "layout": "makeswift::controls::shape-v2::layout::inline",
    "type": {},
  },
  "type": "makeswift::controls::shape-v2",
}
`;

exports[`ShapeV2 serialization serialize/deserialize layout of controls 1`] = `
{
  "config": {
    "layout": "makeswift::controls::shape-v2::layout::popover",
    "type": {},
  },
  "type": "makeswift::controls::shape-v2",
}
`;

exports[`ShapeV2 serialization serialize/deserialize shape of controls 1`] = `
{
  "config": {
    "layout": "makeswift::controls::shape-v2::layout::inline",
    "type": {
      "checkbox": {
        "config": {},
        "type": "makeswift::controls::checkbox",
        "version": 1,
      },
      "color": {
        "config": {
          "defaultValue": "red",
        },
        "type": "makeswift::controls::color",
        "version": 1,
      },
    },
  },
  "type": "makeswift::controls::shape-v2",
}
`;
